<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.madaim.moran1.MainActivity">

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/ok"
        android:id="@+id/button"
        android:layout_marginTop="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/editText" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:text="@string/intro_text"
        android:id="@+id/textView"

        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView4"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/editText" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option1"
        android:id="@+id/checkBox"
        android:checked="true"
        android:layout_below="@+id/button"
        android:layout_alignEnd="@+id/checkBox3" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option2"
        android:id="@+id/checkBox2"
        android:layout_below="@+id/checkBox"
        android:layout_alignParentStart="true"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option3"
        android:id="@+id/checkBox3"
        android:layout_below="@+id/checkBox2"
        android:layout_alignParentStart="true"
        android:checked="true" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="18dp"
        android:background="@android:color/darker_gray"
        ></View>
    <EditText
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_alignBottom="@+id/textView4"
        android:layout_toEndOf="@+id/radioButton" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button1"
        android:id="@+id/radioButton"
        android:layout_below="@+id/checkBox3"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp"
        android:checked="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button2"
        android:id="@+id/radioButton2"
        android:layout_below="@+id/radioButton"
        android:layout_alignParentStart="true"
        android:checked="false" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/textView3"
        android:layout_above="@+id/textView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Your name:"
        android:id="@+id/textView4"
        android:layout_alignBottom="@+id/button"
        android:layout_alignEnd="@+id/checkBox2" />


</RelativeLayout>
